--- a/src/components/Slide.less
+++ b/src/components/Slide.less
@@ -4,10 +4,19 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	font-family: Helvetica, sans-serif;
 }
 
 .Slide-content {
-	max-width: 50%;
+	max-width: 90%;
 	text-align: center;
 	font-size: 5rem;
+}
+
+.Slide-content pre {
+	text-align: left;
+}
+
+img {
+	height: 80%;
 }
