Added more examples

--- a/src/components/Slide.less
+++ b/src/components/Slide.less
@@ -13,8 +13,11 @@
 	font-size: 5rem;
 }
 
-.Slide-content pre {
-	text-align: left;
+.Slide-content {
+	pre, input, button {
+		text-align: left;
+		font-size: 2.2rem;
+	}
 }
 
 img {
